@startuml

title __SIMS's Class Diagram__\n

  namespace academy.mindswap {
    namespace sims {
      class academy.mindswap.sims.Sims {
          - energyLevel : int
          - needsToUseToilet : boolean
          + Sims()
          + addRooms()
          + buyHouse()
          + cleanHouse()
          + doAction()
          + listRooms()
          + moveToRoom()
          + printDirtLevel()
          + printEnergyLevel()
          - changeEnergyLevel()
      }
    }
  }
  

  namespace academy.mindswap {
    namespace sims {
      enum SimsRoomsActions {
        EAT
        SLEEP
        SWIM
        USE_BATHROOM
        WATCH_MOVIE
        WATCH_TV
        WORK
        WORKOUT
        allowedRoomTypes
        description
        energyChange
      }
    }
  }
  

  academy.mindswap.sims.Sims o-- academy.mindswap.sims.house.Room : actualRoom
  academy.mindswap.sims.Sims o-- academy.mindswap.sims.house.House : house


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
